--- a/circle.yml
+++ b/circle.yml
@@ -1,17 +1,6 @@
-## Customize the test machine
 machine:
   python:
-    version: pypy-2.2.1
-
+    version: 2.7.5
 test:
-  post:
-    - ./test.py
-dependencies:
-  pre:
-    - pip install PIL --allow-external PIL --allow-unverified PIL
-deployment:
-  production:
-    branch: master
-    commands:
-      - fab deploy
-
+ post:
+  - python test.py
